--- a/Project.toml
+++ b/Project.toml
@@ -53,6 +53,7 @@ Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5"
 Insolation = "0.3"
+Interpolations = "0.14"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 LambertW = "0.4"
