CompatHelper: add new compat entry for ClimaTimeSteppers at version 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -45,6 +45,7 @@ AtmosphericProfilesLibrary = "0.1"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
+ClimaTimeSteppers = "0.7"
 CloudMicrophysics = "0.9"
 Colors = "0.12"
 Dierckx = "0.5"
