--- a/Project.toml
+++ b/Project.toml
@@ -52,6 +52,7 @@ DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5"
+ImageFiltering = "0.7"
 Insolation = "0.3"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
