--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 
 [compat]
 AtmosphericProfilesLibrary = "0.1"
+ClimaComms = "0.3"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
@@ -53,7 +54,9 @@ DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5"
+ImageFiltering = "0.7"
 Insolation = "0.3"
+Interpolations = "0.14"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 LambertW = "0.4"
