--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 
 [compat]
 AtmosphericProfilesLibrary = "0.1"
-ClimaComms = "0.3"
+ClimaComms = "0.3, 0.4"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
