--- a/Project.toml
+++ b/Project.toml
@@ -47,9 +47,10 @@ ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 ClimaTimeSteppers = "0.7"
-CloudMicrophysics = "0.9"
+CloudMicrophysics = "0.10"
 Colors = "0.12"
 Dierckx = "0.5"
+DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
