--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -148,7 +148,7 @@ steps:
         artifact_paths: "plane_agnesi_mountain_test/*"
       
       - label: ":computer: Schar linear hydrostatic mountain experiment"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 60000.0 --z_max 25000.0 --x_elem 150 --z_elem 250 --dt 0.1secs --t_end 36000.0secs --z_stretch false --vert_diff false --kappa_4 1e6 --dt_save_to_disk 1800secs --initial_condition ScharProfile --discrete_hydrostatic_balance true --topography Schar --rayleigh_sponge true --alpha_rayleigh_uh 0.0 --alpha_rayleigh_w 1.0 --zd_sponge 15000.0 --use_reference_state true --job_id plane_schar_mountain_test"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 60000.0 --z_max 25000.0 --x_elem 150 --z_elem 250 --dt 0.1secs --t_end 36000.0secs --z_stretch false --vert_diff false --kappa_4 1e6 --dt_save_to_disk 1800secs --initial_condition ScharProfile --discrete_hydrostatic_balance true --topography Schar --rayleigh_sponge true --alpha_rayleigh_uh 0.0 --alpha_rayleigh_w 1.0 --zd_rayleigh 15000.0 --use_reference_state true --job_id plane_schar_mountain_test"
         artifact_paths: "plane_schar_mountain_test/*"
       
       - label: ":computer: Density current experiment"
