--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -69,18 +69,18 @@ steps:
   - group: "TurbulenceConvection"
     steps:
 
-      - label: ":balloon: SCM EDMF Bomex (Default: Newton's method) dt2"
+      - label: ":balloon: SCM EDMF Bomex (Default: Newton's method) zelem 30 dt2"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config column --turbconv edmf --debugging_tc true
           --FLOAT_TYPE Float64 --hyperdiff false --apply_limiter false
           --turbconv_case Bomex --subsidence Bomex --edmf_coriolis Bomex --ls_adv Bomex
-          --z_elem 60 --z_stretch false --z_max 3e3
+          --z_elem 30 --z_stretch false --z_max 3e3
           --t_end 1hours --dt_save_to_sol 1mins --dt_save_to_disk 1mins
           --moist equil
-          --job_id edmf_bomex_dt2
+          --job_id edmf_bomex_zelem30_dt2
           --dt 2secs
-        artifact_paths: "edmf_bomex_dt2/*"
+        artifact_paths: "edmf_bomex_zelem30_dt2/*"
         agents:
           slurm_mem: 20GB
       
@@ -96,6 +96,21 @@ steps:
           --job_id edmf_bomex_dt1
           --dt 1secs
         artifact_paths: "edmf_bomex_dt1/*"
+        agents:
+          slurm_mem: 20GB
+      
+      - label: ":balloon: SCM EDMF Bomex (Default: Newton's method) dt0.5"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl
+          --config column --turbconv edmf --debugging_tc true
+          --FLOAT_TYPE Float64 --hyperdiff false --apply_limiter false
+          --turbconv_case Bomex --subsidence Bomex --edmf_coriolis Bomex --ls_adv Bomex
+          --z_elem 60 --z_stretch false --z_max 3e3
+          --t_end 1hours --dt_save_to_sol 1mins --dt_save_to_disk 1mins
+          --moist equil
+          --job_id edmf_bomex_dt0p5
+          --dt 0.5secs
+        artifact_paths: "edmf_bomex_dt0p5/*"
         agents:
           slurm_mem: 20GB
 
