--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -140,9 +140,21 @@ steps:
 
   - group: "Plane Examples"
     steps:
-      - label: ":computer: Agnesi linear hydrostatic mountain experiment"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 240000.0 --z_max 25000.0 --x_elem 80 --z_elem 90 --dt 1.5secs --t_end 14400.0secs --z_stretch false --vert_diff false --kappa_4 1e6 --dt_save_to_disk 3600secs --initial_condition AgnesiHProfile --discrete_hydrostatic_balance true --topography Agnesi --rayleigh_sponge true --alpha_rayleigh_uh 0.0 --alpha_rayleigh_w 0.1 --job_id plane_agnesi_mountain_test"
-        artifact_paths: "plane_agnesi_mountain_test/*"
+      - label: ":computer: Agnesi linear hydrostatic mountain experiment (uniform)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 240000.0 --z_max 25000.0 --x_elem 80 --z_elem 90 --dt 1.5secs --t_end 14400.0secs --z_stretch false --vert_diff false --kappa_4 1e6 --dt_save_to_disk 3600secs --initial_condition AgnesiHProfile --topography Agnesi --rayleigh_sponge true --alpha_rayleigh_uh 0.0 --alpha_rayleigh_w 0.1 --job_id plane_agnesi_mountain_test_uniform --use_reference_state false"
+        artifact_paths: "plane_agnesi_mountain_test_uniform/*"
+      
+      - label: ":computer: Agnesi linear hydrostatic mountain experiment (stretched)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 240000.0 --z_max 25000.0 --x_elem 80 --z_elem 45 --dt 1.5secs --t_end 14400.0secs --vert_diff false --kappa_4 1e6 --dt_save_to_disk 3600secs --initial_condition AgnesiHProfile --topography Agnesi --rayleigh_sponge true --alpha_rayleigh_uh 0.0 --alpha_rayleigh_w 0.1 --job_id plane_agnesi_mountain_test_stretched --use_reference_state false --z_stretch true --dz_bottom 200.0 --dz_top 1000.0"
+        artifact_paths: "plane_agnesi_mountain_test_stretched/*"
+      
+      - label: ":computer: Schar mountain experiment (uniform grid)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 120000.0 --z_max 25000.0 --x_elem 100 --z_elem 45 --dt 0.5secs --t_end 14400.0secs --z_stretch false --vert_diff false --kappa_4 5e7 --dt_save_to_disk 3600secs --initial_condition ScharProfile --topography Schar --rayleigh_sponge true --alpha_rayleigh_uh 0.0 --alpha_rayleigh_w 0.1 --job_id plane_schar_mountain_test_uniform --use_reference_state false --ode_algo SSP33ShuOsher"
+        artifact_paths: "plane_schar_mountain_test_uniform/*"
+      
+      - label: ":computer: Schar mountain experiment (stretched grid)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 120000.0 --z_max 25000.0 --x_elem 100 --z_elem 45 --dt 0.5secs --t_end 14400.0secs --z_stretch true --dz_bottom 200.0 --dz_top 1000.0 --vert_diff false --kappa_4 5e7 --dt_save_to_disk 3600secs --initial_condition ScharProfile --topography Schar --rayleigh_sponge true --alpha_rayleigh_uh 0.0 --alpha_rayleigh_w 0.1 --job_id plane_schar_mountain_test_stretched --use_reference_state false --ode_algo SSP33ShuOsher"
+        artifact_paths: "plane_schar_mountain_test_stretched/*"
 
       - label: ":computer: Density current experiment"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 51200.0 --z_max 6400.0 --x_elem 80 --z_elem 90 --dt 0.3secs --t_end 900.0secs --z_stretch false --vert_diff false --kappa_4 1e7 --dt_save_to_disk 3600secs --initial_condition DryDensityCurrentProfile --discrete_hydrostatic_balance true --job_id plane_density_current_test"
