--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -148,7 +148,7 @@ steps:
         artifact_paths: "plane_agnesi_mountain_test/*"
 
       - label: ":computer: Density current experiment"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 51200.0 --z_max 6400.0 --x_elem 80 --z_elem 90 --dt 0.3secs --t_end 900.0secs --z_stretch false --vert_diff false --kappa_4 1e7 --dt_save_to_disk 3600secs --initial_condition DryDensityCurrentProfile --discrete_hydrostatic_balance true --job_id plane_density_current_test"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config plane --x_max 51200.0 --z_max 6400.0 --x_elem 80 --z_elem 90 --dt 0.3secs --t_end 900.0secs --z_stretch false --vert_diff false --kappa_4 1e5 --dt_save_to_disk 3600secs --initial_condition DryDensityCurrentProfile --discrete_hydrostatic_balance true --job_id plane_density_current_test --viscous_sponge LaplacianViscosity --kappa_2_sponge 75.0"
         artifact_paths: "plane_density_current_test/*"
 
   - group: "Sphere Examples (Dycore)"
